// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOrganizationQuery should apply geoNear query and match snapshot 1`] = `
Object {
  "$geoNear": Object {
    "distanceField": "distance",
    "near": Object {
      "coordinates": Array [
        -11,
        11,
      ],
      "type": "Point",
    },
    "query": Object {
      "is_deleted": Object {
        "$in": Array [
          true,
          false,
        ],
      },
      "is_published": true,
      "services": Object {
        "$elemMatch": Object {
          "$and": Array [
            Object {
              "$or": Array [
                Object {
                  "properties.city": "true",
                },
                Object {
                  "properties.state": "true",
                },
              ],
            },
            Object {
              "$or": Array [
                Object {
                  "tags.en_us.Food": "true",
                },
                Object {
                  "tags.en_us.Legal": "true",
                },
              ],
            },
          ],
        },
      },
      "services.is_deleted": true,
    },
  },
}
`;

exports[`getOrganizationQuery should apply params and match snapshot 1`] = `
Object {
  "$text": Object {
    "$caseSensitive": false,
    "$search": "test",
  },
  "_id": Object {
    "$in": Array [
      "5e7e4be1d54f1760921a557e",
      "5e7e4bdfd54f1760921a4fbf",
    ],
  },
  "is_deleted": Object {
    "$in": Array [
      true,
      false,
    ],
  },
  "is_published": false,
  "owners.email": "test@asylumconnect.com",
  "services": Object {
    "$elemMatch": Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "properties.city": "true",
            },
            Object {
              "properties.state": "true",
            },
            Object {
              "properties.other-place": "true",
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "tags.en_us.Food": "true",
            },
            Object {
              "tags.en_us.Medical.Check Up": "true",
            },
            Object {
              "tags.en_us.Legal": "true",
            },
          ],
        },
      ],
      "properties.foo": Object {
        "$exists": false,
      },
      "properties.hello": "true",
      "properties.req-id": Object {
        "$exists": false,
      },
      "properties.world": "true",
    },
  },
  "services.is_deleted": true,
}
`;

exports[`getOrganizationQuery should apply params and match snapshot claimed 1`] = `
Object {
  "$text": Object {
    "$caseSensitive": false,
    "$search": "test",
  },
  "_id": Object {
    "$in": Array [
      "5e7e4be1d54f1760921a557e",
      "5e7e4bdfd54f1760921a4fbf",
    ],
  },
  "is_deleted": Object {
    "$in": Array [
      true,
      false,
    ],
  },
  "is_published": false,
  "claimedStatus": "claimed",
  "owners.email": "test@asylumconnect.com",
  "services": Object {
    "$elemMatch": Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "properties.city": "true",
            },
            Object {
              "properties.state": "true",
            },
            Object {
              "properties.other-place": "true",
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "tags.en_us.Food": "true",
            },
            Object {
              "tags.en_us.Medical.Check Up": "true",
            },
            Object {
              "tags.en_us.Legal": "true",
            },
          ],
        },
      ],
      "properties.foo": Object {
        "$exists": false,
      },
      "properties.hello": "true",
      "properties.req-id": Object {
        "$exists": false,
      },
      "properties.world": "true",
    },
  },
  "services.is_deleted": true,
}
`;

exports[`getOrganizationQuery should apply params and match snapshot not claimed 1`] = `
Object {
  "$text": Object {
    "$caseSensitive": false,
    "$search": "test",
  },
  "_id": Object {
    "$in": Array [
      "5e7e4be1d54f1760921a557e",
      "5e7e4bdfd54f1760921a4fbf",
    ],
  },
  "is_deleted": Object {
    "$in": Array [
      true,
      false,
    ],
  },
  "is_published": false,
  "claimedStatus": "notClaimed",
  "owners.email": "test@asylumconnect.com",
  "services": Object {
    "$elemMatch": Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "properties.city": "true",
            },
            Object {
              "properties.state": "true",
            },
            Object {
              "properties.other-place": "true",
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "tags.en_us.Food": "true",
            },
            Object {
              "tags.en_us.Medical.Check Up": "true",
            },
            Object {
              "tags.en_us.Legal": "true",
            },
          ],
        },
      ],
      "properties.foo": Object {
        "$exists": false,
      },
      "properties.hello": "true",
      "properties.req-id": Object {
        "$exists": false,
      },
      "properties.world": "true",
    },
  },
  "services.is_deleted": true,
}
`;

exports[`getOrganizationQuery should apply params and match snapshot pending 1`] = `
Object {
  "$text": Object {
    "$caseSensitive": false,
    "$search": "test",
  },
  "_id": Object {
    "$in": Array [
      "5e7e4be1d54f1760921a557e",
      "5e7e4bdfd54f1760921a4fbf",
    ],
  },
  "is_deleted": Object {
    "$in": Array [
      true,
      false,
    ],
  },
  "is_published": false,
  "claimedStatus": "pending",
  "owners.email": "test@asylumconnect.com",
  "services": Object {
    "$elemMatch": Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "properties.city": "true",
            },
            Object {
              "properties.state": "true",
            },
            Object {
              "properties.other-place": "true",
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "tags.en_us.Food": "true",
            },
            Object {
              "tags.en_us.Medical.Check Up": "true",
            },
            Object {
              "tags.en_us.Legal": "true",
            },
          ],
        },
      ],
      "properties.foo": Object {
        "$exists": false,
      },
      "properties.hello": "true",
      "properties.req-id": Object {
        "$exists": false,
      },
      "properties.world": "true",
    },
  },
  "services.is_deleted": true,
}
`;
